# morpha

./: Cargo.toml  README.md
data/: lorem_ipsum.txt  multiline_response.txt
design/: gpt_response_method.txt  name_suggestions.txt  personality.md  sqlite_notes.md
src/: build.rs  conversation.rs  database.rs  lib.rs  main.rs  personality.rs  schema.sql  status.rs
tests/: integration_tests.rs
tests/common/: mod.rs
