[package]
build = "src/build.rs"
description = "A ChatGPT assistant with SQLite archiving of conversations"
authors = ["Ryan Frishkorn <ryan@bluerift.io>"]
name = "morpha"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.17.1"
clap = { version = "4.4.11", features = ["derive"] }
rusqlite = "0.30.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
